@@ -360,7 +360,7 @@ fun run_atp mode name
           val needs_full_types = is_typed_helper_used_in_atp_proof atp_proof
           val preferred_methss =
             (Metis_Method (NONE, NONE),
-             bunches_of_proof_methods try0 smt_proofs needs_full_types
+             bunches_of_proof_methods ctxt try0 smt_proofs needs_full_types
               (if atp_proof_prefers_lifting atp_proof then liftingN else hide_lamsN))
         in
           (used_facts, preferred_methss,
